# FluxPilot

./: .gitignore  Cargo.toml  README.md  TODO.md  work-list.md
FluxPilot/: .gitignore  README.md  TODO.md
FluxPilot-Plasma2350/: Cargo.toml
FluxPilot-Plasma2350/.cargo/: config.toml
FluxPilot-Plasma2350/src/: board.rs  main.rs
FluxPilot/crates/flight-deck/: Cargo.toml  async_queue.js  build.sh  deck.js  interface.md  test.html  ui.js
FluxPilot/crates/flight-deck/src/: graph_assembler.rs  lib.rs  program_graph.rs
FluxPilot/crates/fluxpilot-firmware/: Cargo.toml  i2c_spec.md
FluxPilot/crates/fluxpilot-firmware/src/: flash_storage.rs  led.rs  lib.rs  program.rs  usb_io.rs
FluxPilot/crates/light_machine/: design.md  language.md
FluxPilot/crates/light_machine/src/: assembler.rs  assembler_test.rs  builder.rs  lib.rs  test.rs
FluxPilot/crates/light_machine/src/builder/: test.rs
FluxPilot/crates/pliot/: i2c_spec.md
FluxPilot/crates/pliot/src/: lib.rs  meme_storage.rs  protocol.rs  test.rs
ch32v203qtpy/: .gitignore  Cargo.toml  NOTES.md
ch32v203qtpy/src/: main.rs
crates/ch32v203qtpy/: Cargo.toml  memory.x
crates/ch32v203qtpy/.cargo/: config.toml
crates/ch32v203qtpy/src/: ch32_flash.rs  flash_storage.rs  main.rs  vendor_class.rs
crates/flight-deck/: Cargo.toml  README.md  TODO.md  async_queue.js  deck.js  index.css  index.html  interface.md  ui.js
crates/flight-deck/src/: lib.rs
crates/fluxpilot-firmware/: Cargo.toml
crates/fluxpilot-firmware/src/: flash_storage.rs  led.rs  lib.rs  program.rs  usb_io.rs  usb_vendor.rs
crates/light_machine/: Cargo.toml  design.md  language.md
crates/light_machine/src/: assembler.rs  assembler_test.rs  builder.rs  lib.rs  test.rs
crates/light_machine/src/builder/: test.rs
crates/pliot/: Cargo.toml
crates/pliot/src/: lib.rs  meme_storage.rs  protocol.rs  test.rs
html/: index.html
src/: main.rs
