[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.dependencies]
thiserror-no-std = "2.0.2"

[workspace.dependencies.bincode]
version = "2.0.1"
features = ["derive"]
default-features = false

[workspace.dependencies.heapless]
version = "0.9.0"
default-features = false
features = ["portable-atomic-critical-section"]


[profile.release]
opt-level = "s"
lto = true
strip = false
