[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.dependencies]
thiserror-no-std = "2.0.2"

[workspace.dependencies.postcard]
version = "1.1.3"
features = ["heapless"]
default-features = false

[workspace.dependencies.heapless]
version = "0.9.0"
default-features = false
features = ["portable-atomic-critical-section", "serde"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["serde_derive"]
default-features = false

[profile.release]
opt-level = "s"
#lto = true
#lto = false
lto = "fat"
#lto = "thin"
codegen-units = 1
debug = 0
#strip = false
strip = "symbols"      # nightly supports more; stable supports this in recent cargo
panic = "abort"
#overflow-checks = false
incremental = false