[package]
name = "fluxpilot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fluxpilot"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
ch32-hal = {  git = "https://github.com/ch32-rs/ch32-hal.git", branch = "usbd-example", features = [
    "ch32v203g8r6",
    "memory-x",
    "embassy",
    "rt",
    "time-driver-tim2",
], default-features = false }

embassy-executor = { version = "0.6.0", features = [
    "integrated-timers",
    #"arch-riscv32",
    "arch-spin", # TODO: Required for USBD to connect properly
    "executor-thread",
] }

embassy-time = { version = "0.3.2" }
embassy-usb = { version = "0.3.0" }
embassy-futures = { version = "0.1.0" }

# This is okay because we should automatically use whatever ch32-hal uses
qingke-rt = "*"
qingke = "*"

panic-halt = "1.0"

display-interface-spi = "0.5.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
heapless = "0.8.0"
micromath = { version = "2.1.0", features = ["num-traits"] }
smart-leds = "0.4.0"
ws2812-spi = "0.5.0"
bincode = { version = "2.0.1", default-features = false, features = ["derive"]}
thiserror-no-std = {workspace = true}

# mipidsi = "0.7.1"
# embedded-hal-bus = "0.1.0"


## This is spesified in the wrokspace Cargo.toml
#[profile.release]
#strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
#lto = true
#opt-level = "s" # Optimize for size.
