[package]
name = "fluxpilot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fluxpilot"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
#ch32-hal = {  git = "https://github.com/ch32-rs/ch32-hal.git", branch = "usbd-example", features = [
#ch32-hal = {  git = "https://github.com/moore/ch32-hal.git", features = [
ch32-hal = {  git = "https://github.com/ch32-rs/ch32-hal.git", features = [
    "ch32v203g8r6",
    "memory-x",
    "embassy",
    "rt",
    "time-driver-tim2",
], default-features = false }

embassy-executor = { version = "0.7.0", features = [
    #"integrated-timers",
    #"arch-riscv32",
    "arch-spin", # TODO: Required for USBD to connect properly
    "executor-thread",
    "nightly",
] }

embassy-time = { version = "0.4.0" }
embassy-usb = { version = "0.5.1" }
embassy-futures = { version = "0.1.0" }
embassy-time-queue-utils = { version = "0.3.0", features = ["generic-queue-16"] }

# This is okay because we should automatically use whatever ch32-hal uses
qingke-rt = "*"
#qingke = "*"
qingke = { version = "*", features = [
    "unsafe-trust-wch-atomics", # BUG this is probbly unsafe
] }

# Critical-section implementation for single-hart RISC-V    
riscv            = { version = "0.15", features = [
    #"critical-section-single-hart",
] }
critical-section = "1.2"

# Software-emulated atomics
portable-atomic  = { version = "1.11.1", features = ["critical-section"] }


panic-halt = "1.0"

embedded-hal = "1.0.0"
heapless  = { workspace = true }
micromath = { version = "2.1.0", features = ["num-traits"] }
smart-leds = "0.4.0"
ws2812-spi = "0.5.0"
thiserror-no-std = {workspace = true}
embedded-storage = { workspace = true }
light_machine = {path = "../light_machine"}
embassy-sync = "0.7.0"
postcard = { workspace = true }
pliot = { path = "../pliot" }
static_cell = "2.1.1"
fluxpilot-firmware = { path = "../fluxpilot-firmware" }


[features]
default = ["storage-mem"]
storage-mem = []
storage-flash = []

# mipidsi = "0.7.1"
# embedded-hal-bus = "0.1.0"


## This is spesified in the wrokspace Cargo.toml
#[profile.release]
#strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
#lto = true
#opt-level = "s" # Optimize for size.
